--- a/app/views/admin/funding_sources/show.html.erb
+++ b/app/views/admin/funding_sources/show.html.erb
@@ -9,5 +9,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_funding_source_path(@funding_source) %> |
-<%= link_to 'Back', funding_sources_path %>
+<%= link_to 'Edit', edit_admin_funding_source_path(@funding_source) %> |
+<%= link_to 'Back', admin_funding_sources_path %>
