--- a/app/views/admin/membership_types/show.html.erb
+++ b/app/views/admin/membership_types/show.html.erb
@@ -9,5 +9,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_membership_type_path(@membership_type) %> |
-<%= link_to 'Back', membership_types_path %>
+<%= link_to 'Edit', edit_admin_membership_type_path(@membership_type) %> |
+<%= link_to 'Back', admin_membership_types_path %>
