--- a/app/views/admin/sector_focuses/show.html.erb
+++ b/app/views/admin/sector_focuses/show.html.erb
@@ -9,5 +9,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_sector_focus_path(@sector_focus) %> |
-<%= link_to 'Back', sector_focus_path %>
+<%= link_to 'Edit', edit_admin_sector_focus_path(@sector_focus) %> |
+<%= link_to 'Back', admin_sector_focuses_path %>
