--- a/app/views/admin/annual_budgets/edit.html.erb
+++ b/app/views/admin/annual_budgets/edit.html.erb
@@ -1,12 +1,20 @@
 <h1>Editing annual_budget</h1>
 
-<% form_for(@annual_budget) do |f| %>
+<% form_for([:admin, @annual_budget]) do |f| %>
   <%= f.error_messages %>
 
+  <p>
+    <%= f.label :name %><br />
+    <%= f.text_field :name %>
+  </p>
+  <p>
+    <%= f.label :name_sw %><br />
+    <%= f.text_field :name_sw %>
+  </p>
   <p>
     <%= f.submit "Update" %>
   </p>
 <% end %>
 
-<%= link_to 'Show', @annual_budget %> |
-<%= link_to 'Back', annual_budgets_path %>
+<%= link_to 'Show', [:admin, @annual_budget] %> |
+<%= link_to 'Back', admin_annual_budgets_path %>
