--- a/app/views/admin/annual_budgets/index.html.erb
+++ b/app/views/admin/annual_budgets/index.html.erb
@@ -2,17 +2,21 @@
 
 <table>
   <tr>
+    <th>Name</th>
+    <th>Name sw</th>
   </tr>
 
 <% for annual_budget in @annual_budgets %>
   <tr>
-    <td><%= link_to 'Show', annual_budget %></td>
-    <td><%= link_to 'Edit', edit_annual_budget_path(annual_budget) %></td>
-    <td><%= link_to 'Destroy', annual_budget, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%=h annual_budget.name %></td>
+    <td><%=h annual_budget.name_sw %></td>
+    <td><%= link_to 'Show', [:admin, annual_budget] %></td>
+    <td><%= link_to 'Edit', edit_admin_annual_budget_path(annual_budget) %></td>
+    <td><%= link_to 'Destroy', [:admin, annual_budget], :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New annual_budget', new_annual_budget_path %>
+<%= link_to 'New annual_budget', new_admin_annual_budget_path %>
