--- a/app/views/admin/funding_sources/new.html.erb
+++ b/app/views/admin/funding_sources/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New funding_source</h1>
 
-<% form_for(@funding_source) do |f| %>
+<% form_for([:admin, @funding_source]) do |f| %>
   <%= f.error_messages %>
 
   <p>
@@ -16,4 +16,4 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', funding_sources_path %>
+<%= link_to 'Back', admin_funding_sources_path %>
