--- a/app/views/admin/membership_types/new.html.erb
+++ b/app/views/admin/membership_types/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New membership_type</h1>
 
-<% form_for(@membership_type) do |f| %>
+<% form_for([:admin, @membership_type]) do |f| %>
   <%= f.error_messages %>
 
   <p>
@@ -16,4 +16,4 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', membership_types_path %>
+<%= link_to 'Back', admin_membership_types_path %>
