--- a/app/views/admin/registration_acts/index.html.erb
+++ b/app/views/admin/registration_acts/index.html.erb
@@ -10,13 +10,13 @@
   <tr>
     <td><%=h registration_act.name %></td>
     <td><%=h registration_act.name_sw %></td>
-    <td><%= link_to 'Show', registration_act %></td>
-    <td><%= link_to 'Edit', edit_registration_act_path(registration_act) %></td>
-    <td><%= link_to 'Destroy', registration_act, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to 'Show', [:admin, registration_act] %></td>
+    <td><%= link_to 'Edit', edit_admin_registration_act_path(registration_act) %></td>
+    <td><%= link_to 'Destroy', [:admin, registration_act], :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New registration_act', new_registration_act_path %>
+<%= link_to 'New registration_act', new_admin_registration_act_path %>
