--- a/app/views/admin/registration_acts/new.html.erb
+++ b/app/views/admin/registration_acts/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New registration_act</h1>
 
-<% form_for(@registration_act) do |f| %>
+<% form_for([:admin, @registration_act]) do |f| %>
   <%= f.error_messages %>
 
   <p>
@@ -16,4 +16,4 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', registration_acts_path %>
+<%= link_to 'Back', admin_registration_acts_path %>
