--- a/app/views/admin/registration_acts/show.html.erb
+++ b/app/views/admin/registration_acts/show.html.erb
@@ -9,5 +9,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_registration_act_path(@registration_act) %> |
-<%= link_to 'Back', registration_acts_path %>
+<%= link_to 'Edit', edit_admin_registration_act_path(@registration_act) %> |
+<%= link_to 'Back', admin_registration_acts_path %>
