--- a/app/views/admin/sector_focuses/new.html.erb
+++ b/app/views/admin/sector_focuses/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New sector_focus</h1>
 
-<% form_for(@sector_focus) do |f| %>
+<% form_for([:admin, @sector_focus]) do |f| %>
   <%= f.error_messages %>
 
   <p>
@@ -16,4 +16,4 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', sector_focus_path %>
+<%= link_to 'Back', admin_sector_focuses_path %>
