--- a/app/views/admin/target_groups/index.html.erb
+++ b/app/views/admin/target_groups/index.html.erb
@@ -10,13 +10,13 @@
   <tr>
     <td><%=h target_group.name %></td>
     <td><%=h target_group.name_sw %></td>
-    <td><%= link_to 'Show', target_group %></td>
-    <td><%= link_to 'Edit', edit_target_group_path(target_group) %></td>
-    <td><%= link_to 'Destroy', target_group, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to 'Show', [:admin, target_group] %></td>
+    <td><%= link_to 'Edit', edit_admin_target_group_path(target_group) %></td>
+    <td><%= link_to 'Destroy', [:admin, target_group], :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New target_group', new_target_group_path %>
+<%= link_to 'New target_group', new_admin_target_group_path %>
