--- a/app/views/admin/target_groups/new.html.erb
+++ b/app/views/admin/target_groups/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New target_group</h1>
 
-<% form_for(@target_group) do |f| %>
+<% form_for([:admin, @target_group]) do |f| %>
   <%= f.error_messages %>
 
   <p>
@@ -16,4 +16,4 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', target_groups_path %>
+<%= link_to 'Back', admin_target_groups_path %>
