--- a/app/views/admin/target_groups/show.html.erb
+++ b/app/views/admin/target_groups/show.html.erb
@@ -9,5 +9,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_target_group_path(@target_group) %> |
-<%= link_to 'Back', target_groups_path %>
+<%= link_to 'Edit', edit_admin_target_group_path(@target_group) %> |
+<%= link_to 'Back', admin_target_groups_path %>
