Implement proper authorization

--- a/app/views/csos/index.html.erb
+++ b/app/views/csos/index.html.erb
@@ -15,4 +15,8 @@
   </ul>
 <% end %>
 
-<%= link_to 'New cso', new_cso_path %>
+<% if admin? %>
+  <p class="actions">
+    <%= link_to 'New cso', new_cso_path %>
+  </p>
+<% end %>
