--- a/app/views/csos/show.html.erb
+++ b/app/views/csos/show.html.erb
@@ -74,5 +74,10 @@
   <% end %>
 </table>
 
-<%= link_to 'Edit', edit_cso_path(@cso) %> |
-<%= link_to 'Back', csos_path %>
+<p class="actions">
+  <% if admin? %>
+    <%= link_to 'Edit', edit_cso_path(@cso) %> |
+    <%= link_to 'Destroy', @cso, :confirm => 'Are you sure you want to destroy this CSO? This cannot be undone.', :method => :delete %> |
+  <% end %>
+  <%= link_to 'Back', csos_path %>
+</p>
